# windmill

./: CMakeLists.txt  README.md
include/: classcal_windmill_cerese_predictor.h  classical_windmill_fan.h  classical_windmill_logo.h  classical_windmill_predictor.h  classical_windmill_recognizer.h  classical_windmill_recognizer_param.h
src/: classcal_windmill_cerese_predictor.cpp  classical_windmill_fan.cpp  classical_windmill_logo.cpp  classical_windmill_predictor.cpp  classical_windmill_recognizer.cpp  classical_windmill_recognizer_param.cpp
test/: test_classical_windmill_compute_angle.cpp  test_classical_windmill_compute_angles.cpp  test_classical_windmill_detect_fans.cpp  test_classical_windmill_detect_logos.cpp  test_classical_windmill_detect_objects.cpp  test_classical_windmill_predictor.cpp  test_classical_windmill_predictor_AngleRoll.cpp  test_classical_windmill_preprocess_image.cpp  test_classical_windmill_recoginzer_param.cpp  test_imag.cpp
